# ros2_project_final

./: README.md  技术报告-语雀文档
results/: TEAM10_results1.json  TEAM10_results1.json.sha256  TEAM10_results3.json  TEAM10_results3.json.sha256  TEAM10_results4.json  TEAM10_results4.json.sha256  敲一辈子代码队_results0.json  敲一辈子代码队_results0.json.sha256
ros2_project_final_pkg/: CMakeLists.txt  package.xml
ros2_project_final_pkg/launch/: recognition_shooter.launch.py
ros2_project_final_pkg/models/: digit_model_improved.pth  digit_model_optimized.pth
ros2_project_final_pkg/src/: RecognitionNode.cpp  recognition.cpp  recognition.hpp  shooter_node.cpp
