<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <!-- 1. 功能包核心元信息 -->
  <name>ros2_project_final_pkg</name>
  <version>0.0.0</version>
  <description>校内赛ros2功能包，实现视觉识别与弹丸击打功能</description>
  <maintainer email="itisastory@163.com">Craziet</maintainer>
  <license>Apache-2.0</license>

  <!-- 2. 构建工具依赖（仅保留1次，与CMakeLists.txt对应） -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 3. 核心依赖：用 <depend> 覆盖编译+运行阶段，无需重复声明 <exec_depend> -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>gazebo_msgs</depend>
  <depend>openCV</depend>
  <depend>cv_bridge</depend>
  <depend>referee_pkg</depend>
  <depend>message_filters</depend>
  <depend>ament_index_cpp</depend>

  <!-- 4. 测试依赖 -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- 5. 导出配置 -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
